bad/bin_op_or_string_array.example_compiler_output
ERROR
[1mbad/bin_op_or_string_array.lat:3:5: [1;31merror: [0;1moperator || is defined only for `boolean` values, not `string` and `int[]`[m
	"" || new int[3];
	   [1;32m^[m
